Integrate to external api, next: create auth mechanism for accessing apis
